# tree-sitter-lint-plugin-typescript-eslint

./: .gitignore  .tree-sitter-lint.yml  Cargo.toml
src/: ast_helpers.rs  kind.rs  lib.rs
src/rules/: adjacent_overload_signatures.rs  array_type.rs  ban_ts_comment.rs  ban_tslint_comment.rs  ban_types.rs  class_literal_property_style.rs  class_methods_use_this.rs  consistent_generic_constructors.rs  consistent_indexed_object_style.rs  consistent_type_definitions.rs  default_param_last.rs  mod.rs
src/type_utils/: mod.rs  requires_quoting.rs
src/util/: get_string_length.rs  misc.rs  mod.rs
