[package]
name = "tree-sitter-lint-plugin-typescript-eslint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
squalid = { git = "https://github.com/helixbass/squalid", rev = "7f1af35" }
tree-sitter-lint = { git = "https://github.com/helixbass/tree-sitter-lint", rev = "e7ee6a9" }
tree-sitter-lint-plugin-eslint-builtin = { git = "https://github.com/helixbass/tree-sitter-lint-plugin-eslint-builtin", rev = "1f4cc62" }

[patch.crates-io]
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter", rev = "c16b90d" }
